--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,3 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.29", features = ["derive"] }
+nix = { version = "0.29.0", features = ["mman", "fs"] }
+
+
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
