--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.29", features = ["derive"] }
 nix = { version = "0.29.0", features = ["mman", "fs"] }
+threadpool = "1.8.1"
 
 
 [[bin]]
