--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.5.29", features = ["derive"] }
 nix = { version = "0.29.0", features = ["mman", "fs"] }
 threadpool = "1.8.1"
+ctrlc = { version = "3.4.5", features = ["termination"] }
 
 
 [[bin]]
